--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
 		background: #faf1dd url(02.jpg) repeat-x;
 		background-size:cover;
 		}
+ 	 button {
+            background-color: #8e9ec5;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: right;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 14px;
+            margin: 10px 2px;
+            cursor: pointer;
+            border-radius: 4px;
+            text-align: center;
+        }
+
         
     </style>
 </head>
@@ -24,11 +39,15 @@
 	<p><b><div style="left: 380px;position: absolute;top:80px;color: #457a9c;font-size:80pt;">312寝室主页</div></b></p>
 	<br/>
     &nbsp;
-	<a href="https://dinggg001.github.io/dwx621/cq.html"style="left:300px;height: 240px; position: absolute; top:430px;color:white;text-decoration:none;font-size:60pt;font-family:仿宋;position:absolute"><b>丁文希</b> &nbsp;&nbsp;</a>
+	<a href="https://dinggg001.github.io/dwx621/"style="left:300px;height: 240px; position: absolute; top:430px;color:white;text-decoration:none;font-size:60pt;font-family:仿宋;position:absolute"><b>丁文希</b> &nbsp;&nbsp;</a>
 	<a href="https://ngc2237qiu.github.io/"style="left:620px;height: 240px; position: absolute; top:430px;color: white;text-decoration:none;font-size:60pt;font-family:仿宋;position:absolute"><b>曹钰湫</b> &nbsp;&nbsp;</a>
 	<a href="https://changxiabuluo.github.io/"style="left:940px;height: 240px; position: absolute; top:430px;color: white;text-decoration:none;font-size:60pt;font-family:仿宋;position:absolute"><b>程悦彤</b> </a>
 
 	</div>
-	
+	<div>
+		<button id="change-color"><a href="https://biscuit220702.github.io/CS2307-HUST.github.io/
+
+		  " target="_blank"><font color=white><h3>点击回到班级主页</h3></font></a></button>
+	  </div>
 </body>
 </html>
